[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://sounds/JumpSoundEffect.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Text/Pixel Font.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.6008, 30.126 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 8, 0 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "The main player of the scene. This player's values can be changed without going to the script."
}

[node name="Player_Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": "This is the sprite of the player. It is used for showing the appearance of the player."
}

[node name="Player_Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": "This is the collision of the player. This detects the collision in player and sends signals accordingly."
}

[node name="GroundCheck" type="RayCast2D" parent="."]
scale = Vector2( 6, 1 )
enabled = true
cast_to = Vector2( 0, 40 )
__meta__ = {
"_editor_description_": "This Raycast checks if the player is colliding with the ground."
}

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="UI Element" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="RichTextLabel" parent="UI Element"]
margin_left = -80.0
margin_top = -72.0
margin_right = 96.0
margin_bottom = -32.0
custom_fonts/normal_font = SubResource( 2 )
text = "Score: 0/16"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
